# kudos-app

./: README.md
backend/: README.md  db.sqlite3  pyproject.toml  routes.py
backend/config/: settings.py  urls.py
backend/kudos/: __init__.py  models.py  routes.py
backend/kudos/api/: auth.py  kudos.py
backend/kudos/api/decorators/: jwt_required.py
backend/kudos/migrations/: 0001_initial.py  0002_kudo.py
backend/kudos/models/: __init__.py  basemodel.py  kudomodel.py  organizationmodel.py  usermodel.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx  store.ts
frontend/src/apis/: auth.api.ts  base.query.ts  kudos.api.ts
frontend/src/pages/home/: index.tsx
frontend/src/pages/home/components/: KudosList.tsx  SendKudosForm.tsx
frontend/src/pages/login/: index.tsx
frontend/src/routes/: Protected.tsx
